k8s/ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/x-forwarded-prefix: "/gateway-doctor-appointment-service"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: doctorappointment.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: gateway-doctor-appointment-service
                port:
                  number: 8080
